# hephae

./: Cargo.toml  README.md  Rustfmt.toml  trait-tags.html
.github/workflows/: ci.yml
assets/: gui.wgsl  sprite.wgsl  text.wgsl  trail.wgsl
assets/locales/: locale_en-US.locale.ron  locale_id-ID.locale.ron  locales.ron
assets/sprites/: sprites.atlas.ron
crates/atlas/: Cargo.toml  README.md
crates/atlas/derive/: Cargo.toml  README.md
crates/atlas/derive/src/: atlas_entries.rs  lib.rs
crates/atlas/src/: asset.rs  atlas.rs  bind_group.rs  lib.rs  loader.rs
crates/gui/: Cargo.toml  README.md
crates/gui/src/: compute.rs  def.rs  gui.rs  layout.rs  lib.rs  root.rs  space.rs
crates/gui/src/def/: layout.rs  mod.rs  root.rs  text.rs
crates/gui/src/hui/: layout.rs  mod.rs
crates/locale/: Cargo.toml  README.md
crates/locale/src/: arg.rs  cmd.rs  def.rs  lib.rs  loader.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
crates/render/: Cargo.toml  README.md
crates/render/derive/: Cargo.toml  README.md
crates/render/derive/src/: lib.rs  vertex_layout.rs
crates/render/src/: attribute.rs  drawer.rs  image_bind.rs  lib.rs  pipeline.rs  vertex.rs
crates/text/: Cargo.toml  README.md
crates/text/src/: asset.rs  atlas.rs  compute.rs  def.rs  layout.rs  lib.rs
crates/ui/: Cargo.toml  README.md
crates/ui/src/: lib.rs  measure.rs  node.rs  root.rs  style.rs
crates/utils/: Cargo.toml  README.md
crates/utils/benches/: vec_belt.rs
crates/utils/derive/: Cargo.toml  README.md
crates/utils/derive/src/: lib.rs  plugin_conf.rs  plugin_def.rs
crates/utils/src/: lib.rs  query_ext.rs  vec_belt.rs
examples/: atlas.rs  gui.rs  quad.rs  sprite.rs  text.rs  trail.rs  ui.rs
plugins/: Cargo.toml  README.md
plugins/src/: lib.rs
src/: lib.rs
