[package]
name = "hephae"
description = "A personalized, opinionated Bevy plugin that adds support for drawing and batching arbitrary vertices and indices."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    "assets",
    "examples",
]
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[workspace]
resolver = "2"
members = [
    "crates/atlas",
    "crates/gui",
    "crates/locale",
    "crates/render",
    "crates/text",
    "crates/ui",
    "crates/utils",
    "crates/utils/derive",
]

[workspace.package]
authors = ["GlFolker"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GlennFolker/hephae"
version = "0.6.0"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(docsrs_dep)"] }

[workspace.dependencies]
bevy_app = "0.15"
bevy_asset = "0.15"
bevy_core_pipeline = "0.15"
bevy_derive = "0.15"
bevy_ecs = "0.15"
bevy_hierarchy = "0.15"
bevy_image = "0.15"
bevy_macro_utils = "0.15"
bevy_math = "0.15"
bevy_reflect = "0.15"
bevy_render = "0.15"
bevy_transform = "0.15"
bevy_utils = "0.15"

async-channel = "2"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = { version = "0.12", default-features = false, features = ["std", "swash"] }
core_affinity = "0.8"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support", "plotters"] }
crossbeam-utils = "0.8"
dashmap = { version = "6", features = ["inline"] }
fixedbitset = "0.5"
guillotiere = "0.6"
loom = { version = "0.7", features = ["checkpoint"] }
nom = "8"
nom-language = "0.1"
nonmax = "0.5"
quote = "1"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
syn = { version = "2", features = ["full"] }
sys-locale = "0.3"
taffy = { version = "0.7", default-features = false, features = ["std", "flexbox", "block_layout", "content_size"] }
thiserror = "2"
vec-belt = "1"

hephae-atlas = { version = "0.6.0", path = "crates/atlas" }
hephae-gui = { version = "0.6.0", path = "crates/gui" }
hephae-locale = { version = "0.6.0", path = "crates/locale" }
hephae-render = { version = "0.6.0", path = "crates/render" }
hephae-text = { version = "0.6.0", path = "crates/text" }
hephae-ui = { version = "0.6.0", path = "crates/ui" }
hephae-utils = { version = "0.6.0", path = "crates/utils" }

[dependencies]
hephae-atlas = { optional = true, workspace = true }
hephae-gui = { optional = true, workspace = true }
hephae-locale = { optional = true, workspace = true }
hephae-render.workspace = true
hephae-text = { optional = true, workspace = true }
hephae-ui = { optional = true, workspace = true }
hephae-utils.workspace = true

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_window", "bevy_winit", "bevy_core_pipeline", "png"] }

bytemuck.workspace = true

[features]
default = ["atlas", "gui", "locale", "text", "ui"]
atlas = ["dep:hephae-atlas"]
gui = ["dep:hephae-gui"]
locale = ["dep:hephae-locale", "hephae-text?/locale"]
text = ["dep:hephae-text", "hephae-gui?/text"]
ui = ["dep:hephae-ui"]

[[example]]
name = "quad"

[[example]]
name = "atlas"
required-features = ["atlas"]

[[example]]
name = "gui"
required-features = ["gui", "text"]

[[example]]
name = "text"
required-features = ["text", "locale"]
