[package]
name = "hephae"
description = "A personalized, opinionated Bevy plugin that adds support for drawing and batching arbitrary vertices and indices."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [
    "assets",
    "examples",
]
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-after-content",
    "trait-tags.html",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[workspace]
resolver = "3"
members = [
    "plugins",
    "crates/atlas",
    "crates/atlas/derive",
    "crates/locale",
    "crates/macros",
    "crates/render",
    "crates/render/derive",
    "crates/text",
    "crates/ui",
    "crates/utils",
    "crates/utils/derive",
]

[workspace.package]
authors = ["GlFolker"]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GlennFolker/hephae"
version = "0.8.0"

[workspace.lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(docsrs_dep)"] }

[workspace.dependencies]
bevy = { version = "0.16.0-rc.5", default-features = false, features = ["bevy_log", "std"] }

async-channel = "2"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = { version = "0.14", default-features = false, features = ["std", "swash"] }
derive_more = { version = "2", features = ["display", "error", "from"] }
fixedbitset = "0.5"
guillotiere = "0.6"
nom = "8"
nom-language = "0.1"
proc-macro2 = "1"
quote = "1"
scopeguard = "1"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
syn = { version = "2", features = ["full"] }
sys-locale = "0.3"
taffy = { version = "0.8", default-features = false, features = ["std", "flexbox", "block_layout", "content_size"] }
toml_edit = "0.22"
variadics_please = "1"
vec-belt = "1"

hephae-atlas = { version = "0.8.0", path = "crates/atlas" }
hephae-locale = { version = "0.8.0", path = "crates/locale" }
hephae-macros = { version = "0.8.0", path = "crates/macros" }
hephae-render = { version = "0.8.0", path = "crates/render" }
hephae-text = { version = "0.8.0", path = "crates/text" }
hephae-ui = { version = "0.8.0", path = "crates/ui" }
hephae-utils = { version = "0.8.0", path = "crates/utils" }

[dependencies]
hephae-atlas = { optional = true, workspace = true }
hephae-locale = { optional = true, workspace = true }
hephae-render.workspace = true
hephae-text = { optional = true, workspace = true }
hephae-ui = { optional = true, workspace = true }
hephae-utils.workspace = true
hephae-plugins = { version = "0.8.0", default-features = false, path = "plugins" }

[dev-dependencies.bevy]
version = "0.16.0-rc.5"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "png",
    "multi_threaded",
    "async_executor",
    "tonemapping_luts",
]

[dev-dependencies]
fastrand = "2"

[features]
default = ["atlas", "locale", "text", "ui"]
atlas = ["dep:hephae-atlas", "hephae-plugins/atlas"]
locale = ["dep:hephae-locale", "hephae-text?/locale", "hephae-plugins/locale"]
text = ["dep:hephae-text", "hephae-ui?/text", "hephae-plugins/text"]
ui = ["dep:hephae-ui", "hephae-plugins/ui"]

[[example]]
name = "quad"
doc-scrape-examples = true

[[example]]
name = "atlas"
required-features = ["atlas"]
doc-scrape-examples = true

[[example]]
name = "text"
required-features = ["text", "locale"]
doc-scrape-examples = true

[[example]]
name = "trail"
required-features = ["atlas"]
doc-scrape-examples = true

[[example]]
name = "ui"
required-features = ["ui"]
doc-scrape-examples = true
