[package]
name = "hephae-atlas"
description = "Hephae's texture atlas rendering and asset module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
bevy_app.workspace = true
bevy_asset.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_utils.workspace = true

guillotiere.workspace = true
nonmax.workspace = true
serde.workspace = true
thiserror.workspace = true
