[package]
name = "hephae-atlas"
description = "Hephae's texture atlas rendering and asset module."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-utils.workspace = true

derive_more.workspace = true
guillotiere.workspace = true
nonmax.workspace = true
serde.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_image",
    "bevy_render",
]
