[package]
name = "hephae-gui"
description = "Hephae's Graphical User Interface abstract layout module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
bevy_app.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_math.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true

fixedbitset.workspace = true
nonmax.workspace = true
