[package]
name = "hephae-gui"
description = "Hephae's Graphical User Interface abstract layout module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-text = { workspace = true, optional = true }
hephae-utils.workspace = true

bevy_app.workspace = true
bevy_asset = { workspace = true, optional = true }
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_image = { workspace = true, optional = true }
bevy_math.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true

fixedbitset.workspace = true
nonmax.workspace = true

[features]
text = ["dep:hephae-text", "dep:bevy_asset", "dep:bevy_image"]
