[package]
name = "hephae-locale"
description = "Hephae's localization module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hephae-utils.workspace = true

bevy_app.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

nom.workspace = true
nom-language.workspace = true
scopeguard.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
