[package]
name = "hephae-locale"
description = "Hephae's localization module."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-utils.workspace = true

derive_more.workspace = true
nom.workspace = true
nom-language.workspace = true
scopeguard.workspace = true
serde.workspace = true
smallvec.workspace = true
variadics_please.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
]
