[package]
name = "hephae-render"
description = "Hephae's core rendering module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hephae-utils.workspace = true

bevy_app.workspace = true
bevy_asset.workspace = true
bevy_core_pipeline.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true
bevy_utils.workspace = true

bytemuck.workspace = true
fixedbitset.workspace = true
