[package]
name = "hephae-render"
description = "Hephae's core rendering module."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-render-derive = { version = "0.7", path = "derive" }
hephae-utils.workspace = true

bevy_app.workspace = true
bevy_asset.workspace = true
bevy_color.workspace = true
bevy_core_pipeline.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_image.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true
bevy_utils.workspace = true

bytemuck.workspace = true
fixedbitset.workspace = true
smallvec.workspace = true
vec-belt.workspace = true
