[package]
name = "hephae-render"
description = "Hephae's core rendering module."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-render-derive = { version = "0.8.0", path = "derive" }
hephae-utils.workspace = true

bytemuck.workspace = true
fixedbitset.workspace = true
smallvec.workspace = true
vec-belt.workspace = true

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_image",
]
