[package]
name = "hephae-text"
description = "Hephae's abstract text-rendering module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
hephae-locale = { workspace = true, optional = true }

bevy_app.workspace = true
bevy_asset.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_image.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_utils.workspace = true

async-channel.workspace = true
cosmic-text.workspace = true
fixedbitset.workspace = true
guillotiere.workspace = true
scopeguard.workspace = true
smallvec.workspace = true
sys-locale.workspace = true
thiserror.workspace = true

[features]
locale = ["dep:hephae-locale"]
