[package]
name = "hephae-text"
description = "Hephae's abstract text-rendering module."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-locale = { workspace = true, optional = true }
hephae-utils.workspace = true

async-channel.workspace = true
cosmic-text.workspace = true
derive_more.workspace = true
fixedbitset.workspace = true
guillotiere.workspace = true
scopeguard.workspace = true
smallvec.workspace = true
sys-locale.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
cosmic-text = { workspace = true, features = ["wasm-web"] }
sys-locale = { workspace = true, features = ["js"] }

[dependencies.bevy]
workspace = true
features = [
    "bevy_asset",
    "bevy_image",
    "bevy_render",
]

[features]
locale = ["dep:hephae-locale"]
