[package]
name = "hephae-ui"
description = "Hephae's UI module, powered by Taffy."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-text = { workspace = true, optional = true }
hephae-utils.workspace = true

bevy_app.workspace = true
bevy_core_pipeline.workspace = true
bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_render.workspace = true
bevy_transform.workspace = true

taffy.workspace = true

[features]
default = ["text"]
text = ["dep:hephae-text"]
