[package]
name = "hephae-utils"
description = "Hephae's generic utility module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hephae-utils-derive = { version = "0.6", path = "derive" }

bevy_app.workspace = true
bevy_utils.workspace = true

core_affinity.workspace = true
crossbeam-utils.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = []

[[bench]]
name = "vec_belt"
harness = false
