[package]
name = "hephae-utils"
description = "Hephae's generic utility module."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
hephae-utils-derive = { version = "0.6", path = "derive" }

bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_utils.workspace = true
