[package]
name = "hephae-atlas-derive"
description = "Proc-macro derives for Hephae's texture atlas module"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
proc-macro = true

[dependencies]
hephae-macros.workspace = true
