[package]
name = "hephae-utils-derive"
description = "Hephae's generic utility module proc-macro derive."
authors.workspace = true
edition.workspace = true
keywords.workspace = true
rust-version.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils.workspace = true

proc-macro2 = "1"
quote.workspace = true
syn.workspace = true
