[package]
name = "hephae-utils-derive"
description = "Hephae's generic utility module proc-macro derive."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = [
    "--cfg", "docsrs_dep",
]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils.workspace = true

proc-macro2 = "1"
quote.workspace = true
syn.workspace = true
